Fix spacing for info textbox on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 500px) {
   h2 {
     display: none;
   }
@@ -14,11 +14,15 @@
   #info-button {
     display: none;
   }
-
 }
 
 @media only screen and (max-height: 500px) {
+  #info-title {
+    margin-top: 5px;
+  }
+
   #info-text {
     font-size: 6px;
+    margin-top: 5px;
   }
 }
